--- a/templates/add_expense.html
+++ b/templates/add_expense.html
@@ -58,7 +58,7 @@
     <h1>➕ Add New Expense</h1>
 
     <div class="nav">
-        <a href="{{ url_for('home') }}">⬅ Back to Dashboard</a>
+        <a href="{{ url_for('view_expenses') }}">⬅ Back to Dashboard</a>
     </div>
 
     <form method="POST">
