--- a/templates/view_expenses.html
+++ b/templates/view_expenses.html
@@ -50,7 +50,7 @@
 
     <div class="nav">
         <a href="{{ url_for('add_expense') }}">➕ Add another expense</a>
-       <a href="{{ url_for('view_expenses') }}">⬅ Back to Dashboard</a>
+       <a href="{{ url_for('dashboard') }}">⬅ Back to Dashboard</a>
 
     </div>
 
